notizia_gen/tests/compile_fail/request_missing_reply_param.rs
use notizia_gen::message;

#[message]
enum TestMsg {
    #[request]
    GetValue,
}

fn main() {}
